[package]
name = "socket_filter"
version = "0.1.0"
authors = ["Ihar Salauyou <ihar.salauyou@esrlabs.com>"]
edition = "2018"

[dependencies]
libc = "0.2.98"           # Raw FFI bindings to platform libraries like libc
libbpf-rs = "0.11.0"      # libbpf-rs is a safe, idiomatic, and opinionated wrapper around libbpf-sys
plain = "0.2.3"           # A small Rust library that allows users to reinterpret data of certain types safely

[build-dependencies]
libbpf-cargo = "0.7.1"    # Cargo plugin to build bpf programs
